setup api server with health check

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,12 @@ venv/
 virtualenv/
 
 tags
+
+
+chalice/.chalice/deployments/
+chalice/.chalice/venv/
+chalice/vendor/
+chalice/chalicelib/config/
+chalice/chalicelib/query/
+
+/config/environment.dev
