--- a/query/requirements.txt
+++ b/query/requirements.txt
@@ -1,9 +1,8 @@
-boto3
+chalice >= 1.1.1, < 1.2.0
+boto3==1.7.69
 inflect
-psycopg2-binary==2.7.5
-dcplib
+dcplib==1.4.0
 hca==4.4.9
 pylru
 PyYAML==3.13
 connexion==1.5.2
-
