--- a/chalice/requirements.txt
+++ b/chalice/requirements.txt
@@ -1,10 +1,1 @@
-chalice >= 1.1.1, < 1.2.0
-awscli==1.15.70
-moto==1.3.3
-hca==4.4.9
-boto3==1.7.69
-requests==2.20.1
-dcplib==1.4.0
-connexion==1.5.2
-PyYAML==3.13
-inflection
+-r ../query/requirements.txt
