update for pr comments

--- a/config/query-api.yml
+++ b/config/query-api.yml
@@ -56,6 +56,11 @@ paths:
               query:
                 type: string
                 description: Submitted query
+              results:
+                type: array
+                description: Results of query
+                items:
+                  type: object
         default:
           description: Unexpected error
           schema:
