--- a/load_data_lambda/Makefile
+++ b/load_data_lambda/Makefile
@@ -1,9 +1,10 @@
 .PHONY: install build stage deploy clobber
+include ../common.mk
 
 LAMBDA_NAME=load_data
 ZIP_FILE=$(LAMBDA_NAME).zip
-BUCKET=query-service-lambda-deployment-$(DEPLOYMENT_STAGE)
-STAGED_FILE_KEY=$(LAMBDA_NAME)/$(ZIP_FILE)
+BUCKET=query-service-lambda-deployment-$(AWS_ACCOUNT_ID)
+STAGED_FILE_KEY=$(DEPLOYMENT_STAGE)/$(LAMBDA_NAME)/$(ZIP_FILE)
 
 default: build
 
