add terraform for vpc

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ chalice/vendor/
 chalice/chalicelib/
 
 /config/environment.dev
+load_data_lambda/load_data.zip
+load_data_lambda/target/*
+load_data_lambda/vendor/*
