--- a/load_data_lambda/Makefile
+++ b/load_data_lambda/Makefile
@@ -14,12 +14,18 @@ install:
 
 build:
 	rm -rf target
+	rm -rf load_data.zip
 	mkdir target
+	mkdir target/query
 	pip install -r requirements.txt -t target/ --upgrade
 
 	cp -R vendor.in/* target/
 
-	cp -R ../query target/
+	cp -R ../query/__init__.py target/query
+	cp -R ../query/lambdas target/query
+	cp -R ../query/lib target/query
+	cp -R ../query/scripts target/query
+
 	cp -R *.py target/
 	# build.zip contains the psycopg2-3.6 package downloaded from https://github.com/jkehler/awslambda-psycopg2
 	# and renamed psycopg2
