--- a/query/requirements.txt
+++ b/query/requirements.txt
@@ -1,4 +1,3 @@
-chalice >= 1.1.1, < 1.2.0
 boto3==1.7.69
 inflection==0.3.1
 dcplib==1.4.0
@@ -6,3 +5,4 @@ hca==4.4.9
 pylru
 PyYAML==3.13
 connexion==1.5.2
+psycopg2-binary==2.7.5
