--- a/Dockerfile.allspark
+++ b/Dockerfile.allspark
@@ -49,6 +49,7 @@ RUN apt-get install --assume-yes --no-install-recommends \
     python3-pip \
     python3-dev \
     python3-setuptools \
+    rsync \
     wget \
     unzip \
     zip
