--- a/Dockerfile.allspark
+++ b/Dockerfile.allspark
@@ -20,7 +20,7 @@ ENV DEBIAN_FRONTEND noninteractive
 
 
 # docker
-RUN apt-get update --quiet
+RUN apt-get update
 
 RUN apt-get install -y \
      apt-transport-https \
@@ -40,7 +40,7 @@ RUN apt-get update --quiet
 RUN apt-get install -y docker-ce
 
 # base requirements
-RUN apt-get install --assume-yes --no-install-recommends \
+RUN apt-get update && apt-get install --assume-yes --no-install-recommends \
     build-essential \
     gettext \
     jq \
@@ -67,6 +67,7 @@ RUN pip install chalice>=1.1.1
 RUN pip install connexion==1.5.2
 RUN pip install dcplib==1.4.0
 RUN pip install psycopg2-binary==2.7.5
+RUN pip install coverage==4.5.2
 
 
 RUN useradd -d /home/hca_cicd -ms /bin/bash -g root -G sudo hca_cicd
