add queue for creating long queries

--- a/chalice/.chalice/config.json
+++ b/chalice/.chalice/config.json
@@ -7,7 +7,8 @@
       "environment_variables": {
         "DEPLOYMENT_STAGE": "dev",
         "API_HOST": "query.dev.data.humancellatlas.org",
-        "LOAD_DATA_QUEUE_URL": "https://sqs.us-east-1.amazonaws.com/861229788715/dcp-query-data-input-queue-dev"
+        "LOAD_DATA_QUEUE_URL": "https://sqs.us-east-1.amazonaws.com/861229788715/dcp-query-data-input-queue-dev",
+        "LONG_QUERY_QUEUE_URL": "https://sqs.us-east-1.amazonaws.com/861229788715/dcp-query-long-query-queue-dev"
       }
     },
     "setup_deployed_json": {
