update documentation of deployment process

--- a/query/Makefile
+++ b/query/Makefile
@@ -3,14 +3,18 @@ install:
 	virtualenv -p python3 venv
 	venv/bin/pip install -r requirements-dev.txt --upgrade
 
-.PHONY: test
-test:
+.PHONY: unit-test
+unit-test:
 	. venv/bin/activate \
 	&& coverage run -m unittest discover -s test/unit -p 'test_*.py' --top-level-directory . --verbose
 
 .PHONY: functional-tests
 functional-tests:
 	python -m unittest discover --start-directory test/functional --top-level-directory . --verbose
+
+.PHONY: tests
+tests: unit-test functional-tests
+
 
 .PHONY: report
 report:
