--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
 - pip install -r query/requirements-dev.txt
 script:
 - source environment
-- cd query/ && make install test report
+- cd query/ && make install tests report
 after_success:
 - bash <(curl -s https://codecov.io/bash)
 env:
