--- a/chalice/.chalice/config.json
+++ b/chalice/.chalice/config.json
@@ -8,7 +8,8 @@
         "DEPLOYMENT_STAGE": "dev",
         "API_HOST": "query.dev.data.humancellatlas.org",
         "LOAD_DATA_QUEUE_URL": "https://sqs.us-east-1.amazonaws.com/861229788715/dcp-query-data-input-queue-dev",
-        "LONG_QUERY_QUEUE_URL": "https://sqs.us-east-1.amazonaws.com/861229788715/dcp-query-long-query-queue-dev"
+        "LONG_QUERY_QUEUE_URL": "https://sqs.us-east-1.amazonaws.com/861229788715/dcp-query-long-query-queue-dev",
+        "AWS_ACCOUNT_ID": "861229788715"
       }
     },
     "setup_deployed_json": {
