--- a/query/requirements.txt
+++ b/query/requirements.txt
@@ -1,4 +1,4 @@
-boto3==1.7.69
+boto3>=1.7.69
 inflection==0.3.1
 dcplib==1.4.0
 hca==4.4.9
@@ -7,4 +7,4 @@ PyYAML==3.13
 connexion==1.5.2
 chalice >= 1.1.1, < 1.2.0
 moto==1.3.7
-
+botocore>=1.12.13
