updates for pr comments

--- a/async_query_lambda/Makefile
+++ b/async_query_lambda/Makefile
@@ -1,7 +1,7 @@
-.PHONY: install build stage deploy clobber
+.PHONY: install build stage deploy
 include ../common.mk
 
-LAMBDA_NAME=create_long_query
+LAMBDA_NAME=create_async_query
 ZIP_FILE=$(LAMBDA_NAME).zip
 BUCKET=query-service-$(AWS_ACCOUNT_ID)
 STAGED_FILE_KEY=$(DEPLOYMENT_STAGE)/lambda_deployments/$(LAMBDA_NAME)/$(ZIP_FILE)
@@ -39,6 +39,4 @@ stage: build
 	aws s3 cp $(ZIP_FILE) s3://$(BUCKET)/$(STAGED_FILE_KEY)
 
 deploy: stage
-	aws lambda update-function-code --function-name query-create-long-query-$(DEPLOYMENT_STAGE) --s3-bucket $(BUCKET) --s3-key $(STAGED_FILE_KEY)
-
-clobber: ;
+	aws lambda update-function-code --function-name query-create-async-query-$(DEPLOYMENT_STAGE) --s3-bucket $(BUCKET) --s3-key $(STAGED_FILE_KEY)
