--- a/chalice/Makefile
+++ b/chalice/Makefile
@@ -1,11 +1,11 @@
 include ../common.mk
 export LOAD_DATA_QUEUE_URL := $(shell cd ../terraform && terraform output load_data_queue_url)
-export LONG_QUERY_QUEUE_URL := $(shell cd ../terraform && terraform output long_query_queue_url)
+export ASYNC_QUERY_QUEUE_URL := $(shell cd ../terraform && terraform output async_query_queue_url)
 
 export EXPORT_ENV_VARS_TO_LAMBDA=DEPLOYMENT_STAGE \
 			API_HOST \
 			LOAD_DATA_QUEUE_URL \
-			LONG_QUERY_QUEUE_URL \
+			ASYNC_QUERY_QUEUE_URL \
 			AWS_ACCOUNT_ID
 
 check-queue:
@@ -14,10 +14,10 @@ ifeq ($(DEPLOYMENT_STAGE),$(findstring $(DEPLOYMENT_STAGE),$(LOAD_DATA_QUEUE_URL
 else
 	$(error incorrect ENV: $(DEPLOYMENT_STAGE) FOR LOAD DATA QUEUE URL: $(LOAD_DATA_QUEUE_URL))
 endif
-ifeq ($(DEPLOYMENT_STAGE),$(findstring $(DEPLOYMENT_STAGE),$(LONG_QUERY_QUEUE_URL)))
-	@echo -e "CORRECT ENV FOR LONG QUERY QUEUE URL"
+ifeq ($(DEPLOYMENT_STAGE),$(findstring $(DEPLOYMENT_STAGE),$(ASYNC_QUERY_QUEUE_URL)))
+	@echo -e "CORRECT ENV FOR ASYNC QUERY QUEUE URL"
 else
-	$(error incorrect ENV: $(DEPLOYMENT_STAGE) FOR LONG QUERY QUEUE URL: $(LONG_QUERY_QUEUE_URL))
+	$(error incorrect ENV: $(DEPLOYMENT_STAGE) FOR LONG QUERY QUEUE URL: $(ASYNC_QUERY_QUEUE_URL))
 endif
 
 clean:
