--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,7 +50,7 @@ infra:
 test:
   stage: test
   script:
-    - cd query/ && make install tests
+    - cd query/ && make install unit-test
 
 deploy:
   stage: deploy
