--- a/chalice/.chalice/config.json
+++ b/chalice/.chalice/config.json
@@ -36,9 +36,9 @@
       "environment_variables": {
         "DEPLOYMENT_STAGE": "predev",
         "API_HOST": "query.predev.data.humancellatlas.org",
-        "LOAD_DATA_QUEUE_URL": "'ANYTHING'",
+        "LOAD_DATA_QUEUE_URL": "https://sqs.us-east-1.amazonaws.com/861229788715/dcp-query-data-input-queue-predev",
         "AWS_ACCOUNT_ID": "861229788715",
-        "ASYNC_QUERY_QUEUE_URL": "ANYTHING"
+        "ASYNC_QUERY_QUEUE_URL": "https://sqs.us-east-1.amazonaws.com/861229788715/dcp-query-async-query-queue-predev"
       }
     }
   },
