Address review comments
- Produce readable error if AWS credentials are not set

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ npm-debug.log
 /.terraform
 /terraform/variables.tf
 
+/.chalice/config.json
 /.chalice/policy*.json
 /.chalice/deployments/
 /.chalice/venv/
