--- a/dcpquery-api.yml
+++ b/dcpquery-api.yml
@@ -97,6 +97,13 @@ paths:
             If set, the response will send a `302 Found` HTTP redirect to the query results when the job is done.
           schema:
             type: boolean
+        - name: redirect_when_waiting
+          in: query
+          description: >
+            If set, and the job being described is still running, the response will be a `301 Moved` HTTP redirect back
+            to this route with a Retry-After header.
+          schema:
+            type: boolean
       responses:
         200:
           description: Job found
@@ -104,6 +111,17 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/QueryJobDescription"
+        301:
+          description: >
+            The query is still being executed. This is a convenience redirect back to the job description while we wait
+            for the query to complete. The client should follow the redirect after the delay specified in the
+            Retry-After header.
+          headers:
+            Retry-After:
+              description: Delay in seconds. The client should follow the redirect after waiting for this duration.
+              schema:
+                type: integer
+                format: int64
         302:
           description: >
             Query execution is complete. The client is being redirected to a JSON file containing the query results.
@@ -138,7 +156,7 @@ components:
           type: string
           # TODO: reconcile with old status codes PROCESSING, COMPLETE, FAILED
           enum: [new, running, done, failed]
-        result:
+        results:
           type: array
   
     QueryResult:
@@ -148,7 +166,7 @@ components:
         query:
           type: string
           description: Submitted query
-        result:
+        results:
           type: array
 
     Error:
