--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,29 @@
 # You should not edit this file directly.  Instead, you should edit requirements.txt.in.
 argcomplete==1.9.4
 asn1crypto==0.24.0
-boto3==1.7.84
-botocore==1.10.84
+atomicwrites==1.3.0
+awscli==1.16.131
+boto3==1.9.121
+botocore==1.12.121
 cachetools==3.1.0
 certifi==2019.3.9
 cffi==1.12.2
 chardet==3.0.4
 Click==7.0
 clickclick==1.2.2
+colorama==0.3.9
 CommonMark==0.7.5
 connexion==2.2.0
+crc32c==1.7
 crcmod==1.7
 cryptography==2.3.1
-dcplib==1.5.1
+dcplib==1.6.3
 docutils==0.14
 Flask==1.0.2
 future==0.17.1
 google-auth==1.6.3
-google-auth-oauthlib==0.2.0
-hca==4.8.0
+google-auth-oauthlib==0.3.0
+hca==4.9.0
 idna==2.8
 inflection==0.3.1
 itsdangerous==1.1.0
@@ -32,22 +36,23 @@ oauthlib==3.0.1
 openapi-spec-validator==0.2.6
 pathlib==1.0.1
 psycopg2-binary==2.7.7
-puremagic==1.5
+puremagic==1.4
 pyasn1==0.4.5
 pyasn1-modules==0.2.4
 pycparser==2.19
 PyJWT==1.7.1
 python-dateutil==2.8.0
-PyYAML==3.13
+PyYAML==5.1
 requests==2.21.0
 requests-http-signature==0.1.0
 requests-oauthlib==1.2.0
-rsa==4.0
-s3transfer==0.1.13
+rsa==3.4.2
+s3transfer==0.2.0
+scandir==1.10.0
 six==1.12.0
 SQLAlchemy==1.3.1
 swagger-ui-bundle==0.0.3
 tenacity==5.0.3
-tweak==0.6.7
+tweak==1.0.2
 urllib3==1.24.1
-Werkzeug==0.14.1
+Werkzeug==0.15.1
