Add cost tracking tags to Query Service assets

--- a/.chalice/config.in.json
+++ b/.chalice/config.in.json
@@ -9,7 +9,10 @@
       "api_gateway_stage": "api",
       "iam_policy_file": "policy-dev.json",
       "environment_variables": {},
-      "tags": {}
+      "tags": {
+        "managedBy": "chalice",
+        "project": "dcp"
+      }
     }
   }
 }
